# DIGuides

./: README.md  pyproject.toml
project/project/: settings.py
