[tool.poetry]
name = "diguides"
version = "0.1.0"
description = ""
authors = ["PDYakovlev"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
